Plot ISS on map using leaflet

--- a/ISS_Fetch/index.html
+++ b/ISS_Fetch/index.html
@@ -5,7 +5,19 @@
         <meta name = "viewport" content="width=\, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title> Using fetch to get JSON from API</title>
-        
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
+        integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
+        crossorigin=""
+        />
+        <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
+        integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
+        crossorigin=""></script>
+        <style>
+            #map{
+                height: 500px;
+                width: 500px;
+            }
+        </style>
         
     </head>
     <body>
@@ -14,13 +26,28 @@
             latitude: <span id="lat"></span>°<br />
             longitude: <span id="lon"></span>°
         </p>
+        <div id="map"></div>
         <script>
+            const mymap = L.map('map').setView([0, 0], 1);
+            const attribution =
+                '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors';
+
+            const tileUrl = 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png';
+            const tiles = L.tileLayer(tileUrl, { attribution });
+            tiles.addTo(mymap);
+
+
+            const marker = L.marker([0, 0]).addTo(mymap);
+
 
             const api_url = "https://api.wheretheiss.at/v1/satellites/25544";
             async function getISS(){
                 const response = await fetch(api_url);
                 const data = await response.json();
                 const { latitude, longitude } = data;
+
+                marker.setLatLng([latitude, longitude]);
+                marker.setView([latitude,longitude]);
 
                 document.getElementById('lat').textContent = latitude.toFixed(2);
                 document.getElementById('lon').textContent = longitude.toFixed(2);
