setting interval for lat lon refresh

--- a/ISS_Fetch/index.html
+++ b/ISS_Fetch/index.html
@@ -47,13 +47,15 @@
                 const { latitude, longitude } = data;
 
                 marker.setLatLng([latitude, longitude]);
-                marker.setView([latitude,longitude]);
+                marker.setView([latitude, longitude]);
 
                 document.getElementById('lat').textContent = latitude.toFixed(2);
                 document.getElementById('lon').textContent = longitude.toFixed(2);
             }
 
             getISS();
+
+            setInterval(getISS, 1500);
 
         </script>
     </body>
